--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/Index.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/Index.cshtml
@@ -53,7 +53,7 @@
 
                             <div style="margin-bottom: 50px;margin-top: 50px">
                           <label>Beschreibungen</label>
-                                <textarea asp-for="description"  required class="form-control" id="exampleFormControlTextarea1"></textarea>
+                                <textarea asp-for="description"   class="form-control" id="exampleFormControlTextarea1"></textarea>
                         </div>
                             @if (ViewBag.Content != null)
                             {
