--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Edit/ImageConfig.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Edit/ImageConfig.cshtml
@@ -21,7 +21,7 @@
         @foreach (var imageName in Model)
         {
             <div>
-                <img src="@("/Image/" + imageName)" style="padding:5px" height="300" width="300" alt="@imageName" />
+                <img src="@("/image/" + imageName)" style="padding:5px" height="300" width="300" alt="@imageName" />
                 <a id="deleteImg" href="@Url.Action("Delete", "Home", new { imageName = imageName })">x</a>
                 <p>@imageName</p>
             </div>
