--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/Index.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/Index.cshtml
@@ -11,6 +11,7 @@
             <div id="routBAR">
                 <div id="Bar">
                     <button class="btn btn-danger"><a href="@Url.Action("ImageConfig","Home")">Bilder</a></button>
+                    <button class="btn btn-info"><a href="@Url.Action("SystemInfo","Home")">SystemInfo</a></button>
                     <button class="btn btn-info"><a href="@Url.Action("SendMail","Home")">E-Mail senden</a></button>
                     <button class="btn btn-secondary"><a href="@Url.Action("Profil_HalbzylinderRout","Home")">Profil-Halbzylinder</a></button>
                     <button class="btn btn-success"><a href="@Url.Action("Profil_KnaufzylinderRout","Home")">Profil-Knaufzylinder</a></button>
