--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/wwwroot/css/site.css
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/wwwroot/css/site.css
@@ -766,6 +766,10 @@
         display: grid;
         grid-template-columns: repeat(9, auto);
     }
+    #Table3 {
+        display: grid;
+        grid-template-columns: repeat(4, auto);
+    }
     #routBAR {
         display: grid;
         grid-template-columns: repeat(6, auto);
@@ -1517,7 +1521,10 @@
         display: grid;
         grid-template-columns: repeat(9,auto);
     }
-
+    #Table3 {
+        display: grid;
+        grid-template-columns: repeat(4, auto);
+    }
     #Table2 {
         display: grid;
         grid-template-columns: repeat(8,auto);
@@ -2613,7 +2620,10 @@
         display: grid;
         grid-template-columns: repeat(9,auto);
     }
-
+    #Table3 {
+        display: grid;
+        grid-template-columns: repeat(4, auto);
+    }
     #Table2 {
         display: grid;
         grid-template-columns: repeat(8,auto);
