--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/HebelzylinderRout.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/HebelzylinderRout.cshtml
@@ -85,11 +85,11 @@
                 <table class="table table-bordered">
                     <tbody>
                         <tr id="Table2">
-                            <th>Firmenname</th>
-                            <th>Systeam</th>
+                            <th>Hersteller</th>
+                            <th>System</th>
                             <th>Name</th>
                             <th>Bild</th>
-                            <th>Price</th>
+                            <th>Preis</th>
 
                             <th>Editieren</th>
                             <th>Optionen</th>
