--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/Index.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/Index.cshtml
@@ -114,11 +114,11 @@
                 <table class="table table-bordered table-sm">
                     <tbody>
                         <tr id="Table">
-                            <th>Firmenname</th>
-                            <th>Systeam</th>
+                            <th>Hersteller</th>
+                            <th>System</th>
                             <th>Name</th>
                             <th>Bild</th>
-                            <th>Price</th>
+                            <th>Preis</th>
                             <th>Schlüsselpreis</th>
 
                             <th>Bearbeiten</th>
