--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/Profil_KnaufzylinderRout.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/Profil_KnaufzylinderRout.cshtml
@@ -97,8 +97,8 @@
                 <table class="table table-bordered">
                     <tbody>
                         <tr id="Table2">
-                            <th>Firmenname</th>
-                            <th>Systeam</th>
+                            <th>Hersteller</th>
+                            <th>System</th>
                             <th>Name</th>
                             <th>Bild</th>
                             <th>Price</th>
