--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/VorhangschlossRout.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/VorhangschlossRout.cshtml
@@ -98,11 +98,11 @@
                 <table class="table table-bordered">
                     <tbody>
                         <tr id="Table2">
-                            <th>CompanyName</th>
-                            <th>Systeam</th>
+                            <th>Hersteller</th>
+                            <th>System</th>
                             <th>Name</th>
                             <th>Bild</th>
-                            <th>Price</th>
+                            <th>Preis</th>
 
                             <th>Bearbeiten</th>
                             <th>Optionen</th>
